# cosmoplotian

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cosmoplotian-master.yaml  cosmoplotian-publish.yaml
cosmoplotian/: __init__.py  colormaps.py  projections.py
cosmoplotian/example_subpkg/: setup_package.py
cosmoplotian/tests/: test_plots.py
docs/: conf.py  index.rst
docs/cosmoplotian/: colormaps.rst  index.rst  projections.rst
