[metadata]
name = cosmoplotian
author = Ben Thorne
author_email = bn.thorne@googlemail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bthorne93/cosmoplotian
description = Plotting of images related to cosmology
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bthorne93/cosmoplotian

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy>=4.0.0
    numpy 
    scipy 
    reproject
    matplotlib

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    sphinx-argparse

[options.package_data]
cosmoplotian = data/*

[tool:pytest]
testpaths = "cosmoplotian" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    cosmoplotian/_astropy_init*
    cosmoplotian/conftest.py
    cosmoplotian/*setup_package*
    cosmoplotian/tests/*
    cosmoplotian/*/tests/*
    cosmoplotian/extern/*
    cosmoplotian/version*
    */cosmoplotian/_astropy_init*
    */cosmoplotian/conftest.py
    */cosmoplotian/*setup_package*
    */cosmoplotian/tests/*
    */cosmoplotian/*/tests/*
    */cosmoplotian/extern/*
    */cosmoplotian/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
